--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -119,3 +119,18 @@ footer .container {
     display: none;
   }
 }
+
+@media only screen and (max-width: 470px) {
+  h1 {
+    font-size: 2rem;
+  }
+
+  .gallery img {
+    width: 100%;
+    margin: 0;
+  }
+  
+  footer nav {
+    display: none;
+  }
+}
